# NexGen-Wealth-Mentor

./: .env  .gitignore  README.md  app.py  database.py  finance.db  finance_advisor.py  main.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: scripts.js
templates/: about.html  base.html  chat.html  dashboard.html  goals.html  index.html  input.html  login.html  register.html  results.html
